# meridian-mail

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  meridian_mail_spec.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.agents/rules/: design.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: index.html
src/: App.css  App.tsx  commands.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  test_imap_search.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/imap/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/smtp/: mod.rs
src/components/: AccountSetup.tsx  MessageItem.tsx  NewConversation.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  input.tsx  scroll-area.tsx  separator.tsx
src/lib/: utils.ts
