[package]
name = "meridian-mail"
version = "0.1.0"
description = "Meridian Mail — диалоговый email-клиент"
authors = []
edition = "2021"

[lib]
name = "meridian_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# IMAP
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"

# SMTP
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport"] }

# MIME парсинг и построение
mail-parser = "0.9"
mail-builder = "0.3"

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Кроссплатформенное хранилище паролей (macOS Keychain / Windows Credential Manager / Linux Secret Service)
keyring = { version = "3", features = ["apple-native"] }

# Дата/время
chrono = { version = "0.4", features = ["serde"] }

# Логирование
log = "0.4"
env_logger = "0.11"

# Утилиты
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
regex = "1"
once_cell = "1"
